# powerplant-coding-challenge

./: .dockerignore  .gitignore  Dockerfile  README.md
dev_utils/: pruebas.py
example_payloads/: payload_fran.json  response2.json
francisco-rodriguez-alfaro/: pyproject.toml  run.py
francisco-rodriguez-alfaro/src/app/: __init__.py  routes.py
francisco-rodriguez-alfaro/src/clases/: exceptions.py  powerPlant.py  utils.py
francisco-rodriguez-alfaro/src/francisco_rodriguez_alfaro/app/: __init__.py  routes.py
francisco-rodriguez-alfaro/src/francisco_rodriguez_alfaro/clases/: powerPlant.py  utils.py
francisco-rodriguez-alfaro/tests/: test_app.py  test_dispatcher.py
