[project]
name = "francisco-rodriguez-alfaro"
version = "0.1.0"
description = ""
authors = [
    {name = "Fran Alfaro",email = "francisco.rodriguez.a@outsourcing.cepsa.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask (>=3.1.1,<4.0.0)"
]

[tool.poetry]
packages = [{include = "francisco_rodriguez_alfaro", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
