[tool.poetry]
name = "francisco-rodriguez-alfaro"
version = "0.1.0"
description = ""
authors = ["Fran Alfaro <frodrigueza@axpe.com>"]
readme = "README.md"
packages = [{ include = "francisco_rodriguez_alfaro", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10"
flask = ">=3.1.1,<4.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"